--- a/src/gui/Room/index.scss
+++ b/src/gui/Room/index.scss
@@ -1,5 +1,12 @@
 
 .room {
+	.info {
+		color: white;
+		text-align: center;
+		font-size: 10pt;
+		margin: 0 0 20px 0;
+	}
+
 	.current-state {
 		text-align: center;
 		line-height: 2em;
