--- a/src/gui/Room/GameBoard/NameCard/index.scss
+++ b/src/gui/Room/GameBoard/NameCard/index.scss
@@ -50,8 +50,7 @@
 
 .name-card {
 	width: 60px;
-	line-height: 1em;
-	padding: 18px 0;
+	height: 54px;
 	text-align: center;
 	border-radius: 5px;
 	background: #efefef;
@@ -59,6 +58,12 @@
 	box-shadow: #543304 1px 1px 2px 0;
 	font-size: 10pt;
 	font-family: 'Microsoft Yahei', 'SimHei', 'Arial';
+
+	.name {
+		display: inline-block;
+		vertical-align: middle;
+		line-height: normal;
+	}
 
 	&.assassin {
 		@extend %assassin-dark;
