--- a/src/index.scss
+++ b/src/index.scss
@@ -24,12 +24,14 @@ li {
 }
 
 header {
-	padding: 30px 0 20px 0;
+	padding: 48px 0 18px 0;
 	h1 {
 		text-align: center;
 		img {
 			width: 65%;
 		}
+
+		margin: 0;
 	}
 }
 
