Add eslint pre-check

--- a/src/index.scss
+++ b/src/index.scss
@@ -68,3 +68,13 @@ footer {
 		}
 	}
 }
+
+.button-area {
+	button {
+		width: 6em;
+		height: 2em;
+		background: #ddd;
+		border: #06141d 1px solid;
+		border-radius: 5px;
+	}
+}
